[tool.poetry]
name = "sathouel-ftp-client"
version = "0.1.0"
description = ""
authors = ["Steven Athouel <sathouel@gmail.com>"]
readme = "README.md"
packages = [{include = "sathouel_ftp_client"}]

[tool.poetry.dependencies]
python = "^3.9"
paramiko = "^3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
